# career-pilot

./: README.md
Code/: README.md  data_models.py  main.py  pyproject.toml
Code/Architecture/: Data_Map.md  Functional_Requirements.md  System_Architecture.md  Workflow.md
Code/backend/: pyproject.toml
Code/backend/src/api/: main.py
Code/backend/src/api/routes/: approval.py  job_submission.py
Code/backend/src/db/: manager.py
Code/backend/src/schemas/: csv_schemas.py  data_schemas.py
Code/backend/tests/unit/api/: test_fastapi.py
Code/backend/tests/unit/db/: test_manager.py
JobScaper/: main.py  pyproject.toml
